<resources>
    <string name="app_name">projek</string>
    <string name="nama_aplikasi">Pro-Jek</string>
    <string name="motor">Pro-Jek</string>
    <string name="mobil">Pro-Car</string>
    <string name="harga_motor">Rp 10.000</string>
    <string name="harga_mobil">Rp 20.000</string>
    <string name="nama_driver">Supri Junaedi</string>
    <string name="nama_motor">Honda Beat</string>
    <string name="plat_motor">KT 1234 AB</string>
    <string name="main_map">Main Map</string>
    <string name="silahkan_pilih_kendaraan">Silahkan Pilih Kendaraan</string>
    <string name="helm">helm</string>
    <string name="car">Car</string>
    <string name="order_pro_jek">Order Pro-Jek</string>
    <string name="label_nama_aplikasi">Nama Aplikasi</string>
    <string name="setting">Settings</string>
    <string name="nama_jasa_motor">Nama Jasa Motor</string>
    <string name="nama_jasa_mobil">Nama Jasa Mobil</string>
    <string name="label_nama_driver">Nama Driver</string>
    <string name="label_nama_motor">Nama Motor</string>
    <string name="label_plat_motor">Plat Motor</string>
    <string name="harga_jasa_motor">Harga Jasa Motor</string>
    <string name="harga_jasa_mobil">Harga Jasa Mobil</string>
    <string name="simpan">Simpan</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="driver_anda">Driver Anda</string>
</resources>