<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ivMainMap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/main_map" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOrderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_pilih_kendaraan"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvOrderTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clOrderProjek" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOrderProjek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/order_background"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/clOrderProcar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderTitle">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/helm"
                android:src="@drawable/ic_helm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/glProjek1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/motor"
                android:layout_marginStart="20dp"
                android:id="@+id/tvProjek"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/glProjek1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvHargaProjek" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvHargaProjek"
                android:text="@string/harga_motor"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvProjek"
                app:layout_constraintStart_toStartOf="@id/tvProjek"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/glProjek1"
                app:layout_constraintGuide_percent="0.1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOrderProcar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/order_background_white"
            app:layout_constraintTop_toBottomOf="@id/clOrderProjek"
            app:layout_constraintBottom_toTopOf="@id/btnOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/car"
                android:src="@drawable/ic_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/glProcar1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mobil"
                android:layout_marginStart="20dp"
                android:id="@+id/tvProcar"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/glProcar1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvHargaProcar"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvHargaProcar"
                android:text="@string/harga_mobil"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvProcar"
                app:layout_constraintStart_toStartOf="@id/tvProcar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/glProcar1"
                app:layout_constraintGuide_percent="0.1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_pro_jek"
            app:layout_constraintTop_toBottomOf="@id/clOrderProcar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>